# InoCoordinator-Backend

./: .env  Cargo.toml  Procfile  README.md  Rocket.toml  \
migrations/2022-10-27-212354_create_organizer/: up.sql
migrations/2022-10-27-214039_create_events/: up.sql
migrations/2022-10-27-214059_create_players/: down.sql  up.sql
migrations/2022-10-27-214118_create_points/: up.sql
migrations/2022-10-27-221224_create_captures/: down.sql  up.sql
src/: errors.rs  lib.rs  main.rs  schema.rs
src/api/: initial.rs  mod.rs  utils.rs
src/api/mutations/: capture.rs  event.rs  mod.rs  organizer.rs  player.rs  point.rs
src/api/queries/: event.rs  mod.rs  organizer.rs  player.rs  point.rs  stats.rs
src/repos/: capture.rs  event.rs  mod.rs  organizer.rs  player.rs  point.rs
src/services/: capture.rs  event.rs  mod.rs  organizer.rs  player.rs  point.rs  stats.rs
src/types/: capture.rs  event.rs  mod.rs  organizer.rs  player.rs  point.rs  stats.rs  token.rs
