[package]
name = "ino_organizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0" }
serde_json = "1.0"
diesel = { version = "1.4.5", features = ["chrono", "postgres", "r2d2", "uuidv07"]}
chrono = {version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
async-trait = "0.1.57"
rand = "0.8.5"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool"]

[lib]
name = "lib"
path = "src/lib.rs"
